# NNW

./: .gitignore  CMakeLists.txt  package.json
.github/workflows/: build-artifacts.yml
Runtime/: NNInterop.cs  NNW.asmdef
Runtime/Core/: NativeLibrary.cs
Runtime/Core/NN/: Model.cs  NativeHandles.cs  Trainer.cs
Runtime/Core/RL/: Enums.cs  QTable.cs
Runtime/Plugins/: nn.jslib
bindings/c#/: Program.cs  nnw.csproj
bindings/c#/src/Core/: Enums.cs  Model.cs  NativeHandles.cs  Trainer.cs  TrainerConfig.cs
bindings/c#/src/Core/NN/: Enums.cs  Model.cs  Trainer.cs  TrainerConfig.cs
bindings/c#/src/Core/RL/: Enums.cs  Interfaces.cs  NativeHandles.cs  QLearningAgent.cs  QTable.cs
bindings/c#/src/Examples/: AndExample.cs  QLearningExample.cs  XorExample.cs
bindings/c#/src/Interop/: NNInterop.cs  NativeNNResolver.cs  RLInterop.cs
bindings/python/: and_example.py  neural_wrapper.py  pyproject.toml  xor_example.py
bindings/python/nnw/: __init__.py  _ffi.py  core.py  enums.py
bindings/unity/: package.json
bindings/unity/Editor/: NNWBuildPostProcessor.cs
bindings/unity/Runtime/: Core.cs  NNInterop.cs  NNWInterop.cs  RLInterop.cs
bindings/unity/Runtime/Plugins/WebGL/: nn.jslib
examples/: and.cpp  api_example.cpp  rl_api_example.cpp  xor.cpp
include/: api.h  api_rl.h  tensor.h
include/nn/: model.h
include/nn/activation/: activation.h
include/nn/layers/: dense_layer.h  layer.h
include/nn/loss/: loss.h  loss_mse.h
include/rl/: environment.h  policy.h  q-learning-agent.h  q-table.h
include/training/optimizer/: optimizer.h  optimizer_adamw.h  optimizer_sgd.h
include/training/trainer/: trainer.h
src/: api.cpp  api_rl.cpp  tensor.cpp
src/nn/: model.cpp
src/nn/activation/: activation.cpp
src/nn/layers/: dense_layer.cpp
src/nn/loss/: loss_mse.cpp
src/rl/: policy.cpp  q-learning-agent.cpp  q-table.cpp
src/training/optimizer/: optimizer_adamw.cpp  optimizer_sgd.cpp
src/training/trainer/: trainer.cpp
