[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnw"
version = "0.3.0"
description = "Neural Network Wrapper"
authors = [{ name = "SoraAsc" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nnw"]

[tool.setuptools.package-data]
nnw = ["libs/*.dll", "libs/*.so"]